src/main/webapp/style/css/login_stylesheet.css
body{

}
#registar{
    color: white;
}
H1{
    text-align: center;
    color: gold;
}
/*H2{*/
    /*text-align: center;*/
    /*color: gold;*/
/*}*/
H3{
    color: gold;
}
h4{
    color:gold;
}
p{
    color: gold;
    font-size: 15px;

}
a{
    color: white;
}
.btn-default{
    background-color: gold;
    color: black;
}
.btn-block{
    background-color: red;
    color: black;
    font-weight: bolder;
}
.container-fluid{
    background-color: black;
    color: gold;
    border: solid black;
}
.navbar-brand{
    color: gold;
}
.btn{
    font-size: 18px;
    border-radius: 18px;
}
.btn-primary{
    background-color: gold;
    border-color: transparent;
    color:black;
}






.byline {
    animation: move-byline 6s linear;
}



@keyframes spin-letters {
    0%, 10% {
        opacity: 0;
        transform: rotateY(90deg);
    }
    30% {
        opacity: 1;
    }
    70%, 86% {
        transform: rotateY(0);
        opacity: 1;
    }
    95%, 100% {
        opacity: 0;
    }
}

@keyframes move-byline {
    0% {
        transform: translateZ(5em);
    }
    100% {
        transform: translateZ(0);
    }
}

/* Make the 3D work on the container */
.starwars-demo {
    perspective: 900px;
    transform-style: preserve3d;
}

/* General styles and layout */
body {
    background: #000 url(//cssanimation.rocks/demo/starwars/images/bg.jpg);
}

.starwars-demo {
    height: 10em;
    left: 50%;
    position: absolute;
    top: 48%;
    transform: translate(-50%, -50%);
    width: 34em;
}

.byline span {
    display: inline-block;
}

img {
    width: 100%;
}

.star, .wars, .byline {
    position: absolute;
}



.byline {
    color: gold;
    font-family: "ITC Serif Gothic", Lato;
    font-size: 10em;
    left: -4em;
    letter-spacing: 0.3em;
    right: -4em;
    text-align: center;
    text-transform: uppercase;
    top: -66%;
}

/*** Media queries for adjusting to different screen sizes ***/

@media only screen and (max-width: 600px) {
    .starwars-demo {
        font-size: 10px;
    }
}

@media only screen and (max-width: 480px) {
    .starwars-demo {
        font-size: 7px;
    }
}
.form-group{
    color:gold;
}

/*//AT-AT style*/

body {
    overflow: hidden;
}

#main {
    position: relative;
    padding: 0;
    z-index: 0;
    margin: 30px auto;
    width: 1000px;
    height: 600px;
    opacity: 1;
}

/* Head */

#head {
    height: auto;
    position: absolute;
    left: 151px;
    top: 138px;
    width: auto;
    padding-top: 20px;
    opacity: 1;
    z-index: 100;
}

#head .shape0 {
    height: 0;
    width: 129px;
    border-bottom: 58px solid #DDD9D9;
    border-left: 24px solid transparent;
    border-right: 2px solid transparent;
    border-top: 0 solid transparent;
    z-index: 20;
}

#head .shape01 {
    width: 55px;
    height: 55px;
    background: #DDD9D9;
    -webkit-border-radius: 70px;
    -moz-border-radius: 70px;
    border-radius: 70px;
    position: absolute;
    top: 19px;
    left: 26px;
    border: 1px solid #000;
    z-index: 11;
}

#head .shape02 {
    border-color: transparent transparent #DDD9D9;
    border-style: solid;
    border-width: 26px 3px 25px 126px;
    width: 0;
    height: 0;
    position: absolute;
    top: -31px;
    left: 25px;
    z-index: 10;
}

#head .shape1 {
    position: absolute;
    height: 2px;
    width: 16px;
    background: #DDD9D9;
    bottom: -6px;
    left: -6px;
    border: 1px solid #000;
    z-index: -3;
}

#head .shape2 {
    position: absolute;
    bottom: -9px;
    left: -17px;
    height: 8px;
    background: #DDD9D9;
    width: 10px;
    -webkit-border-radius: 0 3px 3px 0;
    -moz-border-radius: 0 3px 3px 0;
    border-radius: 0 3px 3px 0;
    border: 1px solid #000;
}

#head .shape3 {
    position: absolute;
    bottom: -8px;
    left: 8px;
    background: #DDD9D9;
    height: 6px;
    width: 29px;
    border: 1px solid #000;
    z-index: -2;
}

#head .shape4 {
    position: absolute;
    bottom: -18px;
    width: 34px;
    height: 40px;
    background: #DDD9D9;
    left: 34px;
    z-index: -1;
    border-bottom: 1px solid #000;
}

#head .shape5 {
    border-color: transparent transparent #DDD9D9;
    border-style: solid;
    border-width: 26px 4px 25px 33px;
    width: 0;
    height: 0;
    position: absolute;
    bottom: -13px;
    left: 42px;
    -webkit-transform: rotate(312deg);
    -moz-transform: rotate(312deg);
    -o-transform: rotate(312deg);
    transform: rotate(312deg);
    z-index: -1;
}

#head .shape6 {
    border-color: transparent transparent #DDD9D9;
    border-style: solid;
    border-width: 26px 4px 25px 33px;
    width: 0;
    height: 0;
    position: absolute;
    bottom: -13px;
    left: 21px;
    -webkit-transform: rotate(-308deg);
    -moz-transform: rotate(-308deg);
    -o-transform: rotate(-308deg);
    -ms-transform: rotate(-308deg);
    transform: rotate(-308deg);
    z-index: -10;
}

#head .shape6 {
    border-color: transparent transparent #DDD9D9;
    border-style: solid;
    border-width: 26px 4px 25px 33px;
    width: 0;
    height: 0;
    position: absolute;
    bottom: -13px;
    left: 24px;
    -webkit-transform: rotate(-308deg);
    -moz-transform: rotate(-308deg);
    -o-transform: rotate(-308deg);
    -ms-transform: rotate(-308deg);
    transform: rotate(-308deg);
    z-index: -1;
}

#head .shape7 {
    z-index: 11;
    position: absolute;
    top: 60px;
    left: -12px;
    height: 1px;
    width: 62px;
    background: #DDD9D9;
    border: 1px solid #000;
    z-index: 101;
}

#head .shape8 {
    position: absolute;
    z-index: 130;
    background: #DDD9D9;
    height: 10px;
    width: 3px;
    -webkit-border-radius: 1px;
    -moz-border-radius: 1px;
    border-radius: 1px;
    top: 55px;
    left: 44px;
    border: 1px solid #000;
}
/* ... */

